--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>EcommerceLaptopProject</title>
-  <base href="/Shopping-Website/">
+  <base href="/NextCart-Online-Shopping-Platform/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="main-NHDYYGJZ.js" type="module"></script></body>
+<script src="main-T65I6YIT.js" type="module"></script></body>
 </html>
